...
import androidx.compose.ui.unit.dp
import ch.eureka.eurekapp.model.data.project.Project
import ch.eureka.eurekapp.ui.designsystem.tokens.Spacing

/** Test tags for the [ProjectDropdownMenu] composable. */
object ProjectDropDownMenuTestTag {
  const val PROJECT_DROPDOWN_MENU = "ProjectDropDown"
  const val DROPDOWN_MENU_ITEM = "DropDownMenuItem"
}

/**
 * A reusable Dropdown Menu component for selecting a Project.
 *
...
