...
import androidx.lifecycle.viewmodel.compose.viewModel
import ch.eureka.eurekapp.R

/** Test tags used by UI tests. */
object SignInScreenTestTags {
  const val SIGN_IN_TITLE = "loginTitle"
  const val SIGN_IN_WITH_GOOGLE_BUTTON = "signInWithGoogleButton"
}

@Composable
fun SignInScreen(
    signInViewModel: SignInViewModel = viewModel(),
    credentialManager: CredentialManager = CredentialManager.create(LocalContext.current),
...
